Use ViewStack to convert card upload request CVC experiment to 2-step flow

BUG=707104

Review-Url: https://codereview.chromium.org/2883273005
Cr-Commit-Position: refs/heads/master@{#474386}

Former-commit-id: 335471d2d07caccbd4a89d67d86f777cf85941da